# hack-princeton-2025-julia

./: README.md
backend/: .gitignore  README.md  llm_autocorrect.py  llm_autocorrect_test.py  main.py  pyproject.toml  run.sh  sample-recv.py  sample-send.py
compute/: README.md  infer_t5.py  interactive_gui.py  main.py  pyproject.toml  run.py  run.sh  sign_langauge_predictor.py  train_t5.py
expo-frontend/: package-lock.json  package.json
expo-frontend/app/(tabs)/: explore.tsx  index.tsx
expo-frontend/components/: CameraStream.tsx
frontend/: README.md  index.html
frontend/src/: camera.ts  main.ts  style.css
